force-app/main/default/objects/custom_create253__c/custom_create253__c.object-meta.xml
<CustomObject>
    <label>Custom created object253</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects253</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>