force-app/main/default/objects/custom_create253__c/fields/custom_create_253field513__c.field-meta.xml
<CustomField>
    <fullName>custom_create_253field513__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 253field513</label>
    <type>Checkbox</type>
</CustomField>