force-app/main/default/objects/custom_create253__c/fields/custom_create_253field540__c.field-meta.xml
<CustomField>
    <fullName>custom_create_253field540__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 253field540</label>
    <type>Checkbox</type>
</CustomField>